--- a/source/template/model/model/hapi/db/hapi/adopter/latest/function_adopter_delete_toi.js.C--D.tmpl
+++ b/source/template/model/model/hapi/db/hapi/adopter/latest/function_adopter_delete_toi.js.C--D.tmpl
@@ -14,7 +14,7 @@ module.exports = class FunctionAdopterDeleteToi extends Step {
 
     this.baseKind='base';
     this.baseVersion=baseVersion;
-    this.params = 'token TOKEN, owner OWNERID, id IDENTITY';
+    this.params = 'token TOKEN, owner OwnerId, id IDENTITY';
     this.types = 'TOKEN, OWNERID, IDENTITY';
 
     this.method = 'DELETE';
