--- a/source/template/model/model/hapi/db/hapi/adopter/latest/function_adopter_put_toij.js.C--D.tmpl
+++ b/source/template/model/model/hapi/db/hapi/adopter/latest/function_adopter_put_toij.js.C--D.tmpl
@@ -15,7 +15,7 @@ module.exports = class FunctionAdopterPut extends Step {
     this.method = 'PUT';
     this.baseKind='base';
     this.baseVersion=baseVersion;
-    this.params = 'token TOKEN, owner OWNERID, id IDENTITY, form JSONB';
+    this.params = 'token TOKEN, owner OwnerId, id IDENTITY, form JSONB';
     this.types = 'TOKEN,  OWNERID, IDENTITY, JSONB';
 
     // 
