--- a/source/template/postgres/root/latest/.env.cru-.tmpl
+++ b/source/template/postgres/root/latest/.env.cru-.tmpl
@@ -8,3 +8,5 @@ POSTGRES_PASSWORD=mysecretdatabasepassword
 POSTGRES_JWT_SECRET=fe5d9645_302a_493d_b9de_207dfa16ca9c
 POSTGRES_API_PASSWORD=mysecretdatabasepassword
 POSTGRES_JWT_CLAIMS={"aud":"<<WS_ORGANIZATION>>-api", "iss":"<<WS_ORGANIZATION>>", "sub":"client-api", "user":"guest", "scope":"api_guest", "key":"0"}
+
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}
