--- a/source/template/model/model/hapi/db/hapi/adopter/latest/function_adopter_post_toj.js.C--D.tmpl
+++ b/source/template/model/model/hapi/db/hapi/adopter/latest/function_adopter_post_toj.js.C--D.tmpl
@@ -9,7 +9,7 @@ module.exports = class FunctionAdopterPost extends Step {
     this.name = `${this.kind}_${this.version}.${this.name}`;
     this.baseKind='base';
     this.baseVersion=baseVersion;
-    this.params = 'token TOKEN, owner OWNERID, form JSONB';
+    this.params = 'token TOKEN, owner OwnerId, form JSONB';
     this.types = 'TOKEN, OWNERID, JSONB';
 
     this.method = 'POST';
