--- a/source/template/model/model/latest/db.deploy.js.C--D.tmpl
+++ b/source/template/model/model/latest/db.deploy.js.C--D.tmpl
@@ -91,11 +91,11 @@ const FunctionSignup = require(`./db/signup/function_signup_post.js`);
 // let adopter_version = '006';
 // version = '006';
 // const FunctionAdopterDeleteTv = require(`./db/adopter/function_adopter_delete_toi.js`);
-const FunctionAdopterDeleteToi = require(`./db/adopter/function_adopter_delete_toi.js`);
-const FunctionAdopterGetToi = require(`./db/adopter/function_adopter_get_toi.js`);
+// const FunctionAdopterDeleteToi = require(`./db/adopter/function_adopter_delete_toi.js`);
+// const FunctionAdopterGetToi = require(`./db/adopter/function_adopter_get_toi.js`);
 // const FunctionAdopterGetTI = require(`./db/adopter/function_adopter_get_ti.js`);
-const FunctionAdopterPostTj = require(`./db/adopter/function_adopter_post_toj.js`);
-const FunctionAdopterPutToij = require(`./db/adopter/function_adopter_put_toij.js`);
+// const FunctionAdopterPostTj = require(`./db/adopter/function_adopter_post_toj.js`);
+// const FunctionAdopterPutToij = require(`./db/adopter/function_adopter_put_toij.js`);
 
 // Adoptee
 // let adoptee_version = '007';
@@ -105,7 +105,7 @@ const FunctionAdopterPutToij = require(`./db/adopter/function_adopter_put_toij.j
 // const FunctionAdopteeGetTJ = require(`./db/adoptee/function_adoptee_get_tj.js`);
 // const FunctionAdopteeGetTo = require(`./db/adoptee/function_adoptee_get_to.js`);
 
-const FunctionAdopteeGetTMbr = require(`./db/adoptee/function_adoptee_get_tmbr.js`);
+// const FunctionAdopteeGetTMbr = require(`./db/adoptee/function_adoptee_get_tmbr.js`);
 // const FunctionAdopteePostToj = require(`./db/adoptee/function_adoptee_post_toj.js`);
 // const FunctionAdopteePutToij = require(`./db/adoptee/function_adoptee_put_toij.js`);
 
@@ -121,9 +121,9 @@ const FunctionAdopteeGetTMbr = require(`./db/adoptee/function_adoptee_get_tmbr.j
 // Document
 // let document_version = '003';
 // version = '003';
-const FunctionDocumentDeleteToi = require(`./db/document/function_document_delete_toi.js`);
-const FunctionDocumentGetToi = require(`./db/document/function_document_get_toi.js`);
-const FunctionDocumentPostToj = require(`./db/document/function_document_post_toj.js`);
+// const FunctionDocumentDeleteToi = require(`./db/document/function_document_delete_toi.js`);
+// const FunctionDocumentGetToi = require(`./db/document/function_document_get_toi.js`);
+// const FunctionDocumentPostToj = require(`./db/document/function_document_post_toj.js`);
 
 // Page
 // let page_version = '003';
@@ -138,7 +138,7 @@ const FunctionDocumentPostToj = require(`./db/document/function_document_post_to
 const DatabaseUrl = require('../lib/plugin/database_url.js');
 // const DatabaseUrl = require('../lib/plugin/postgres/database_url.js');
 // generate-const
-
+/*
 const FunctionAdopteeDeleteTop = require(`./__generated/function_adoptee_delete_top.js`); // generated-deletable
 const FunctionAdopteeGetTop = require(`./__generated/function_adoptee_get_top.js`); // generated-deletable
 const FunctionAdopteeGetTm = require(`./__generated/function_adoptee_get_tm.js`); // generated-deletable
@@ -152,6 +152,7 @@ const FunctionPageDeleteTop = require(`./__generated/function_page_delete_top.js
 const FunctionPageGetTop = require(`./__generated/function_page_get_top.js`); // generated-deletable
 const FunctionPagePostTot = require(`./__generated/function_page_post_tot.js`); // generated-deletable
 const FunctionPagePutTopt = require(`./__generated/function_page_put_topt.js`); // generated-deletable
+*/
 // [Generate-Const]
 
 // run all scripts
@@ -160,19 +161,16 @@ const FunctionPagePutTopt = require(`./__generated/function_page_put_topt.js`); 
 // Make new class for alters
 // [* set the verson ]
 
-const documentFolder = `${__dirname}/documents`;
-console.log('documentFolder ',documentFolder);
-const SetupRunner = require('../aad_admin/lib/runner.js');
-const BreakdownSetup = require('../aad_admin/lib/breakdown_setup.js');
+// const documentFolder = `${__dirname}/documents`;
+// console.log('documentFolder ',documentFolder);
+const SetupRunner = require('../lib/admin/runner.js');
+const BreakdownSetup = require('../lib/admin/breakdown_setup.js');
 
-const BreakdownDocs = require('../aad_admin/lib/breakdown_docs.js');
-const StoreDocs = require('../aad_admin/lib/store_docs.js');
-const Util = require('../aad_admin/lib/util.js');
+const BreakdownDocs = require('../lib/admin/breakdown_docs.js');
+const StoreDocs = require('../lib/admin/store_docs.js');
+const Util = require('../lib/admin/util.js');
 
-const fileList = new Util().getFileList(documentFolder);
-
-
-
+// const fileList = new Util().getFileList(documentFolder); # (pages.setup.md, tou.document.md)
 
 const baseVersion='0_0_1';
 const apiVersion='0_0_1';
@@ -302,17 +300,17 @@ const runner = new SqlRunner(DB_URL)
        .add(new FunctionSignin('api', apiVersion))
 
        // Adopter
-       .add(new FunctionAdopterDeleteToi('api', apiVersion, baseVersion))
-       .add(new FunctionAdopterGetToi('api', apiVersion, baseVersion))
+       // .add(new FunctionAdopterDeleteToi('api', apiVersion, baseVersion))
+       // .add(new FunctionAdopterGetToi('api', apiVersion, baseVersion))
        // .add(new FunctionAdopterGetTI('api', apiVersion, baseVersion))
-       .add(new FunctionAdopterPostTj('api', apiVersion, baseVersion))
-       .add(new FunctionAdopterPutToij('api', apiVersion, baseVersion))
+       // .add(new FunctionAdopterPostTj('api', apiVersion, baseVersion))
+       // .add(new FunctionAdopterPutToij('api', apiVersion, baseVersion))
 
        // .add(new FunctionAdopterPutTIJ('api', apiVersion, baseVersion))
 
        // Adoptee
        // gen .add(new FunctionAdopteeDeleteToi('api', apiVersion, baseVersion))
-       .add(new FunctionAdopteeGetTMbr('api', apiVersion, baseVersion))
+       // .add(new FunctionAdopteeGetTMbr('api', apiVersion, baseVersion))
        // gen .add(new FunctionAdopteeGetTm('api', apiVersion, baseVersion))
        // gen .add(new FunctionAdopteeGetTop('api', apiVersion, baseVersion))
        // gen .add(new FunctionAdopteePostTot('api', apiVersion, baseVersion))
@@ -327,9 +325,9 @@ const runner = new SqlRunner(DB_URL)
         // gen .add(new FunctionAdopteePutTopt('api', apiVersion, baseVersion))
 
        // Document
-       .add(new FunctionDocumentDeleteToi('api', apiVersion, baseVersion))
-       .add(new FunctionDocumentGetToi('api', apiVersion, baseVersion))
-       .add(new FunctionDocumentPostToj('api', apiVersion, baseVersion))
+       // .add(new FunctionDocumentDeleteToi('api', apiVersion, baseVersion))
+       // .add(new FunctionDocumentGetToi('api', apiVersion, baseVersion))
+       // .add(new FunctionDocumentPostToj('api', apiVersion, baseVersion))
 
        // Page
         // gen .add(new FunctionPageDeleteTop('api', apiVersion,baseVersion))
@@ -339,22 +337,28 @@ const runner = new SqlRunner(DB_URL)
 
        // Data Loads
        // TBD .add(new DataDocumentPost('api', apiVersion, baseVersion))
+       /*
+       .add(new FunctionResourceDeleteTop('api',apiVersion, baseVersion)) // generated-deletable
+       add(new FunctionResourceGetTop('api',apiVersion, baseVersion)) // generated-deletable
+       .add(new FunctionResourceGetTm('api',apiVersion, baseVersion)) // generated-deletable
+       .add(new FunctionResourcePostTot('api',apiVersion, baseVersion)) // generated-deletable
+       .add(new FunctionResourcePutTopt('api',apiVersion, baseVersion)) // generated-deletable
+        */
        // generate-add
 
-
-       .add(new FunctionAdopteeDeleteTop('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopteeGetTop('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopteeGetTm('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopteePostTot('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopteePutTopt('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopterDeleteTop('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopterGetTop('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopterPostTot('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionAdopterPutTopt('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionPageDeleteTop('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionPageGetTop('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionPagePostTot('api',apiVersion, baseVersion)) // generated-deletable
-       .add(new FunctionPagePutTopt('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopteeDeleteTop('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopteeGetTop('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopteeGetTm('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopteePostTot('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopteePutTopt('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopterDeleteTop('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopterGetTop('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopterPostTot('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionAdopterPutTopt('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionPageDeleteTop('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionPageGetTop('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionPagePostTot('api',apiVersion, baseVersion)) // generated-deletable
+       // .add(new FunctionPagePutTopt('api',apiVersion, baseVersion)) // generated-deletable
        // [Generate-Add]
        ;
 
@@ -370,13 +374,15 @@ const runner = new SqlRunner(DB_URL)
 const setupRunner =  new SetupRunner(true)
                   .setConnectionString(DB_URL)
                   ;
+/* ReferenceError: fileList is not defined
+
 setupRunner
     .add(new BreakdownSetup({fileList: fileList, documentFolder: documentFolder}))
     // .add(new StoreDocs(setupRunner.getOutputFrom(0)))
     .add(new BreakdownDocs({fileList: fileList, documentFolder: documentFolder}))
     .add(new StoreDocs(setupRunner.getOutputFrom(1)))
   ;
-
+*/
 const debug = false;
 runner.run(debug).then(() => {
   setupRunner.run();
