--- a/source/template/__project__/latest/project_<<WS_PROJECT>>.md.C---.tmpl
+++ b/source/template/__project__/latest/project_<<WS_PROJECT>>.md.C---.tmpl
@@ -1,6 +1,8 @@
 # Project: <<WS_PROJECT>>
+    1. schema: api
+    1. version: 1.0.0
 
-## Claims:
+## Claim:
 
 | name      | aud                 | iss                       | sub        | user       | scope     | key |
 |-----------|---------------------|---------------------------|------------|------------|-----------|-----|
@@ -16,6 +18,7 @@
 Default resource
 
 1. version: 1.0.0
+1. active: y
 
 #### Model:
 
