--- a/source/template/model/model/hapi/db/hapi/resource/002/function_resource_post_toj.js.C--D.tmpl
+++ b/source/template/model/model/hapi/db/hapi/resource/002/function_resource_post_toj.js.C--D.tmpl
@@ -1,31 +1,42 @@
 'use strict';
-
+// function_resource_post_toj.js.C--D.tmpl
 const Step = require('../../../lib/runner/step');
-module.exports = class FunctionAdopteePostToj extends Step {
+module.exports = class FunctionResourcePostToj extends Step {
   constructor(baseName, baseVersion) {
     super(baseName, baseVersion);
     // this.kind = kind;
     this.method = 'POST';
-    this.name = 'adoptee';
+    this.schema = 'base_0_0_1';
+    this.name = 'resource';
     this.desc = `${this.method} ${this.name} with form`;
-    this.name = `${this.kind}_${this.version}.${this.name}`;
-    this.baseKind='base';
+    this.name = `${this.schema}.${this.name}`;
+    // this.name = `${this.kind}_${this.version}.${this.name}`;
+
+    // this.baseKind='base';
     this.baseVersion=baseVersion;
     this.params = 'token TOKEN, owner OWNER_ID, form JSONB';
+    // this.params = 'token TOKEN, owner OWNER_ID, form JSONB';
+
     this.types = 'TOKEN, OWNER_ID, JSONB';
 
     this.role = 'api_user,api_admin';
     this.scope = 'api_user';
 
     this.sql = `
-            DROP FUNCTION if exists ${this.name}(${this.types})
-    /*
-    CREATE OR REPLACE FUNCTION ${this.name}(${this.params})  RETURNS JSONB AS $$
+    -- source: function_resource_post_toj.js.C--D.tmpl
+
+    DROP FUNCTION if exists ${this.schema}.${this.name}(${this.types});
+
+    CREATE OR REPLACE FUNCTION ${this.schema}.${this.name}(${this.params})  RETURNS JSONB AS $$
     
     -- Declare _form JSONB; 
-    Declare result JSONB; 
-    Declare chelate JSONB := '{"pk":"drain_id", 
-                               "sk":"const#ADOPTEE", 
+    Declare result JSONB;
+
+    -- pk is upper(form.type) + '#' + form.id
+    -- sk is 'id'
+    -- tk is
+    Declare chelate JSONB := '{"pk":format("%s#%s",upper(form.type)),
+                               "sk":"id",
                                "tk":"*", 
                                "form":"", 
                                "owner":"*", 
@@ -34,11 +45,12 @@ module.exports = class FunctionAdopteePostToj extends Step {
                                "active": true}'::JSONB;
     
     BEGIN
-      -- [Function: adoptee given an user_token TOKEN, owner OWNER_ID and form JSON]
+      -- [Function: resource given ${this.params}]
       -- [Description: Add a new user by Admin]
 
       -- [Validate Token]
-      result := base_${this.baseVersion}.validate_token(token, '${this.role}') ;
+      result := ${this.schema}.validate_token(token, '${this.role}') ;
+      -- result := base_${this.baseVersion}.validate_token(token, '${this.role}') ;
 
       if result is NULL then
         -- [Fail 403 When token is invalid]
@@ -60,56 +72,43 @@ module.exports = class FunctionAdopteePostToj extends Step {
       end if;
 
     -- [* Validate Form]
-      
-      -- form := form::JSONB;
+
     
     -- [* Validate Requred POST form fields]
-     
-      if not(form ? 'lon') then
-          -- [* Fail 400 when form is missing lon field]
-          return '{"status":"400","msg":"Bad Request","issue":"form missing lon"}'::JSONB;
-      end if;
 
-      if not(form ? 'lat') then
-          -- [* Fail 400 when form is missing lat field]
-          return '{"status":"400","msg":"Bad Request","issue":"form missing lat"}'::JSONB;
+      if not(form ? 'id') then
+          -- [* Fail 400 when form is missing id field]
+          return '{"status":"400","msg":"Bad Request","issue":"form missing id"}'::JSONB;
       end if;
-      if not(form ? 'name') then
-          -- [* Fail 400 when form is missing name field]
-          return '{"status":"400","msg":"Bad Request","issue":"form missing name"}'::JSONB;
+      if not(form ? 'owner') then
+          -- [* Fail 400 when form is missing owner field]
+          return '{"status":"400","msg":"Bad Request","issue":"form missing owner"}'::JSONB;
       end if;
       if not(form ? 'type') then
           -- [* Fail 400 when form is missing type field]
           return '{"status":"400","msg":"Bad Request","issue":"form missing type"}'::JSONB;
       end if;      
-      if not(form ? 'drain_id') then
-          -- [* Fail 400 when form is missing drain_id field]
-          return '{"status":"400","msg":"Bad Request"},"issue":"form missing drain_id"'::JSONB;
-      end if;       
-      
-      --if not(form ? 'adopter_key') then
-      --    -- [* Fail 400 when form is missing adopter_key field]
-      --    return '{"status":"400","msg":"Bad Request","issue":"form missing adopter_key"}'::JSONB;
-      --end if;  
-      
+
     -- [* Assemble Data]
-      chelate := base_${this.baseVersion}.chelate(chelate, form); -- add form to chelate, generate owner_key
+      chelate := ${this.schema}.chelate(chelate, form); -- add form to chelate, generate owner_key
+      --chelate := base_${this.baseVersion}.chelate(chelate, form); -- add form to chelate, generate owner_key
 
     -- [* Execute insert]
-      result := base_${this.baseVersion}.insert(chelate, owner);
+      result := ${this.schema}.insert(chelate, owner);
+      -- result := base_${this.baseVersion}.insert(chelate, owner);
 
     -- [* Return {status,msg,insertion}]
       return result;
 
     END;
     $$ LANGUAGE plpgsql;
-    */
+
     /* Doesnt work in Hobby
-    grant EXECUTE on FUNCTION ${this.name}(TOKEN, OWNER_ID, JSONB) to api_guest;
+    grant EXECUTE on FUNCTION ${this.schema}.${this.name}(${this.types}) to api_guest;
     */
     `;
   }    
   getName() {
-    return `.${this.name}(${this.params}) .${this.method} .${this.role} .${this.desc}.`;
+    return `${this.schema}.${this.name}(${this.params}) .${this.method} .${this.role} .${this.desc}.`;
   }
 };
